--- a/ansible/playbook_test.yml
+++ b/ansible/playbook_test.yml
@@ -8,14 +8,20 @@
   ### SETUP ANSIBLE ###
 
   ### PREPARING WINDOWS TEMPLATES ###
-    - name: prepare_windows_template
-      import_tasks: tasks/windows/prepare_server.yml
+    # - name: prepare_windows_template
+    #   import_tasks: tasks/windows/prepare_server.yml
 
-    - name: build_windows_template
-      import_tasks: tasks/windows/build_server.yml
+    # - name: build_windows_template
+    #   import_tasks: tasks/windows/build_server.yml
 
-    - name: prepare_windows_client_template
-      import_tasks: tasks/windows/prepare_client.yml
+    # - name: prepare_windows_client_template
+    #   import_tasks: tasks/windows/prepare_client.yml
 
-    - name: build_windows_client_template
-      import_tasks: tasks/windows/build_client.yml
+    # - name: build_windows_client_template
+    #   import_tasks: tasks/windows/build_client.yml
+
+    # - name: deploy objects on windows server
+    #   import_tasks: tasks/windows/objects_server.yml
+    
+    - name: transform vms to template
+      import_tasks: tasks/windows/build_templates.yml
