--- a/ansible/tasks/windows/build_client.yml
+++ b/ansible/tasks/windows/build_client.yml
@@ -12,27 +12,27 @@
     agent: 1
     node: "{{ inventory_hostname }}"
 
-- name: create_vm
-  command: >
-    qm create {{ item.vm_id }}
-    --name {{ item.vm_name }}
-    --sockets {{ vm_sockets }}
-    --cores {{ vm_cores }}
-    --memory {{ vm_memory }}
-    --ide2 file=local:iso/Windows_Client_Auto.iso,media=cdrom
-    --scsihw virtio-scsi-pci
-    --sata0 {{ item.storage_name }}:{{ drive_size_gb }},format={{ format }}
-    --net0 model=e1000e,bridge=cust100
-    --ostype {{ vm_os_type }}
-    --agent {{ agent }}
-    --boot order=ide2
-  with_items: "{{ vms }}"
-  register: vm_creation
+# - name: create_vm
+#   command: >
+#     qm create {{ item.vm_id }}
+#     --name {{ item.vm_name }}
+#     --sockets {{ vm_sockets }}
+#     --cores {{ vm_cores }}
+#     --memory {{ vm_memory }}
+#     --ide2 file=local:iso/Windows_Client_Auto.iso,media=cdrom
+#     --scsihw virtio-scsi-pci
+#     --sata0 {{ item.storage_name }}:{{ drive_size_gb }},format={{ format }}
+#     --net0 model=e1000e,bridge=cust100
+#     --ostype {{ vm_os_type }}
+#     --agent {{ agent }}
+#     --boot order=ide2
+#   with_items: "{{ vms }}"
+#   register: vm_creation
 
-- name: start_vms
-  command: "qm start {{ item.vm_id }}"
-  with_items: "{{ vms }}"
-  when: item.vm_id in vm_creation.results | map(attribute='item.vm_id') | list
+# - name: start_vms
+#   command: "qm start {{ item.vm_id }}"
+#   with_items: "{{ vms }}"
+#   when: item.vm_id in vm_creation.results | map(attribute='item.vm_id') | list
 
 - name: waiting_agent
   shell: "qm agent {{ item.vm_id }} ping"
@@ -53,7 +53,30 @@
   delay: 5
   with_items: "{{ vms }}"
 
-      
+- name: verify ip configuration
+  shell: >
+    qm guest exec {{ item.vm_id }} -- powershell.exe -Command "
+    (Get-NetIPAddress -InterfaceAlias Ethernet -AddressFamily IPv4).IPAddress"
+  register: ip_verification
+  with_items: "{{ vms }}"
+
+
+- name: reconfigure ethernet interface
+  shell: >
+    qm guest exec {{ item.vm_id }} -- powershell.exe -Command "
+    Remove-NetIPAddress -InterfaceAlias Ethernet -Confirm:$false;
+    New-NetIPAddress -InterfaceAlias Ethernet -IPAddress '10.100.0.{{ item.vm_id }}' -PrefixLength 16 -DefaultGateway 10.100.0.254 -AddressFamily IPv4;
+    Set-DnsClientServerAddress -InterfaceAlias Ethernet -ServerAddresses ('{{ item.server_ip }}','8.8.8.8')"
+  register: network_config_2
+  until: network_config.rc_2 == 0
+  retries: 100 
+  delay: 5
+  when: "'10.100.0.' + item.vm_id not in ip_verification.results[idx].stdout"
+  with_items: "{{ vms }}"
+  loop_control:
+    index_var: idx
+
+
 - name: waiting_install
   command: >
     qm guest exec {{ item.vm_id }} -- powershell.exe -Command "Get-Content 'C:\Windows\Setup\State\State.ini'"
@@ -62,7 +85,6 @@
   retries: 200
   delay: 10
   with_items: "{{ vms }}"
-
 
 - name: insert pc in domain
   shell: >
