--- a/deployment_api/playbooks/deploy_client.yml
+++ b/deployment_api/playbooks/deploy_client.yml
@@ -6,11 +6,10 @@
 
   vars:
     ansible_python_interpreter: /opt/deployment_api/venv/bin/python
+    proxmox_username: "{{ proxmox_user.split('@')[0] }}"
+    proxmox_realm: "{{ proxmox_user.split('@')[1] }}"
 
   tasks:
-    - name: Load deployment variables
-      import_tasks: tasks/set_fact.yml
-
     - name: Clone VMs asynchronously
       community.general.proxmox_kvm:
         api_user: "{{ proxmox_user }}"
@@ -50,3 +49,27 @@
       loop: "{{ deploy_results.results }}"
       async: 300
       poll: 0
+      
+    - name: Authenticate with Proxmox
+      uri:
+        url: "https://{{ proxmox_ip }}:8006/api2/json/access/ticket"
+        method: POST
+        body_format: form-urlencoded
+        body:
+          username: "{{ proxmox_username }}"
+          password: "{{ proxmox_password }}"
+          realm: "{{ proxmox_realm }}"
+        validate_certs: false
+        status_code: 200
+      register: auth_response
+
+    - name: debug
+      debug:
+        msg: "auth OK"
+      when: auth_response.status == 200
+        
+    - name: setup_sdn
+      import_tasks: tasks/setup_sdn.yml
+
+    - name: enable_firewall
+      import_tasks: tasks/setup_firewall.yml
