--- a/ansible/tasks/proxmox/deploy_container.yml
+++ b/ansible/tasks/proxmox/deploy_container.yml
@@ -39,7 +39,7 @@
     --rootfs {{ core_storage }}:{{ container_size }}
     --net0 name=eth0,bridge="{{ sdn_corenet_name }}",ip="{{ container_ip }}/24,gw={{ sdn_corenet_gateway }}",firewall=1
     {% if enable_public is defined %}
-    --net1 name=eth1,bridge="{{ public_ct_adapter }}",ip="{{ public_ct_ip }}{{ public_ct_subnet }}"{% if public_ct_mac is defined and public_ct_mac|length > 0 %},hwaddr="{{ public_ct_mac }}"{% endif %}
+    --net1 name=eth1,bridge="{{ public_ct_adapter }}",ip="{{ public_ct_ip }}{{ public_ct_subnet }}"{% if public_ct_mac is defined and public_ct_mac|length > 0 %},hwaddr="{{ public_ct_mac }}"{% endif %},firewall=1
     {% endif %}
     --onboot 1
     --ssh-public-keys /tmp/ssh_key_"{{ container_id }}".pub
@@ -51,6 +51,14 @@
     path: "/tmp/ssh_key_{{ container_id }}.pub"
     state: absent
   changed_when: false
+
+- name: input_policy
+  shell: |
+    pvesh set /nodes/{{ inventory_hostname }}/lxc/{{ container_id }}/firewall/options \
+      -enable 1 \
+      -policy_in ACCEPT \
+      -policy_out ACCEPT
+  when: container_exists.rc != 0
 
 - name: tun_container
   block:
