feat(deployment) giving arguments for windows

--- a/deployment_api/playbooks/deploy_client.yml
+++ b/deployment_api/playbooks/deploy_client.yml
@@ -3,57 +3,14 @@
   gather_facts: no
   vars_files:
     - vars.yml
-
   vars:
     ansible_python_interpreter: /opt/deployment_api/venv/bin/python
     proxmox_username: "{{ proxmox_user.split('@')[0] }}"
     proxmox_realm: "{{ proxmox_user.split('@')[1] }}"
-
   tasks:
-
     - name: Load deployment variables
       import_tasks: tasks/set_fact.yml
-
-    - name: Clone VMs asynchronously
-      community.general.proxmox_kvm:
-        api_user: "{{ proxmox_user }}"
-        api_password: "{{ proxmox_password }}"
-        api_host: "{{ proxmox_ip }}:8006"
-        clone: "vm-{{ client_id }}-{{ item.id }}"
-        vmid: "{{ item.id }}"
-        newid: "{{ client_id }}00{{ item.id }}"
-        name: "vm-{{ client_id }}-{{ item.id }}"
-        node: "{{ proxmox_node }}"
-        storage: "{{ vm_storage }}"
-        format: raw
-        timeout: 600
-      loop: "{{ templates }}"
-      async: 1200
-      poll: 0
-      register: deploy_jobs
-
-    - name: Wait for VM clones to finish
-      async_status:
-        jid: "{{ item.ansible_job_id }}"
-      register: deploy_results
-      until: deploy_results.finished
-      retries: 60
-      delay: 5
-      loop: "{{ deploy_jobs.results }}"
-
-    - name: Start cloned VMs in background
-      community.general.proxmox_kvm:
-        api_user: "{{ proxmox_user }}"
-        api_password: "{{ proxmox_password }}"
-        api_host: "{{ proxmox_ip }}:8006"
-        vmid: "{{ item.invocation.module_args.newid }}"
-        node: "{{ proxmox_node }}"
-        state: started
-        timeout: 180
-      loop: "{{ deploy_results.results }}"
-      async: 300
-      poll: 0
-      
+     
     - name: Authenticate with Proxmox
       uri:
         url: "https://{{ proxmox_ip }}:8006/api2/json/access/ticket"
@@ -66,14 +23,28 @@
         validate_certs: false
         status_code: 200
       register: auth_response
-
+     
     - name: debug
       debug:
         msg: "auth OK"
       when: auth_response.status == 200
-        
+     
+    - name: clone_vms
+      import_tasks: tasks/clone_vm.yml
+
+    - name: Start cloned VMs
+      community.general.proxmox_kvm:
+        api_user: "{{ proxmox_user }}"
+        api_password: "{{ proxmox_password }}"
+        api_host: "{{ proxmox_ip }}:8006"
+        vmid: "{{ client_id }}00{{ item.id }}"
+        node: "{{ proxmox_node }}"
+        state: started
+        timeout: 180
+      loop: "{{ templates }}"
+
     - name: setup_sdn
       import_tasks: tasks/setup_sdn.yml
-
+     
     - name: enable_firewall
       import_tasks: tasks/setup_firewall.yml
