--- a/ansible/tasks/windows/debug.yml
+++ b/ansible/tasks/windows/debug.yml
@@ -1,6 +1,6 @@
 - name: configure folder smb
   shell: >
-    qm guest exec 111 -- powershell.exe -Command "
+    qm guest exec 111 'Administrator' -- powershell.exe -Command "
         \$Parameters = @{
             Name = 'test'
             Path = 'C:\\test'
@@ -11,7 +11,7 @@
       New-Item -Path \$Parameters.Path -ItemType Directory -Force
       icacls \$Parameters.Path /inheritance:r /grant:r 'Administrator:(F)' /grant:r 'mgmgrand.com\DannyOcean:(M)'
       New-SmbShare @Parameters
-      Restart-Service LanmanServer
+      Restart-Service LanmanServer -Force
       Grant-SmbShareAccess -Name \$Parameters.Name -AccountName 'svc-bella' -AccessRight Read -Force
       Grant-SmbShareAccess -Name \$Parameters.Name -AccountName 'mgmgrand.com\DannyOcean' -AccessRight Change -Force
     "
