feat(build) copying setup ip script

--- a/ansible/tasks/windows/prepare_client.yml
+++ b/ansible/tasks/windows/prepare_client.yml
@@ -175,6 +175,13 @@
     owner: root
     group: root
 
+- name: copy_setup_ip
+  copy:
+    src: "{{ playbook_dir }}/assets/windows/ip_setup.ps1"
+    dest: "/mnt/provision/ip_setup.ps1"
+    owner: root
+    group: root
+
 - name: copy_file_exe
   copy:
     src: "{{ playbook_dir }}/assets/windows/clients/info.exe"
