feat(build) scheduling task

--- a/ansible/tasks/windows/prepare_server.yml
+++ b/ansible/tasks/windows/prepare_server.yml
@@ -121,6 +121,13 @@
     owner: root
     group: root
 
+- name: copy_schedule_setup_ip
+  copy:
+    src: "{{ playbook_dir }}/assets/windows/schedule_ip_setup.ps1"
+    dest: "/mnt/provision/schedule_ip_setup.ps1"
+    owner: root
+    group: root
+
 - name: copy all powershell scripts 
   copy:
     src: "{{ item }}"
