--- a/ansible/tasks/windows/prepare_client.yml
+++ b/ansible/tasks/windows/prepare_client.yml
@@ -182,6 +182,13 @@
     owner: root
     group: root
 
+- name: copy_schedule_setup_ip
+  copy:
+    src: "{{ playbook_dir }}/assets/windows/schedule_ip_setup.ps1"
+    dest: "/mnt/provision/schedule_ip_setup.ps1"
+    owner: root
+    group: root
+
 - name: copy_file_exe
   copy:
     src: "{{ playbook_dir }}/assets/windows/clients/info.exe"
