--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -164,8 +164,11 @@
     - name: deploy objects on windows server
       import_tasks: tasks/windows/objects_server.yml
     
+    - name: configure scheduled task for ip setup
+      import_tasks: tasks/windows/setup_ip.yml
+
     - name: configure ad for vulnerability
       import_tasks: tasks/windows/vulnerability.yml
 
-    # - name: transform vms to template
-    #   import_tasks: tasks/windows/build_templates.yml
+    - name: transform vms to template
+      import_tasks: tasks/windows/build_templates.yml
