--- a/ansible/tasks/windows/setup_ip.yml
+++ b/ansible/tasks/windows/setup_ip.yml
@@ -4,3 +4,32 @@
   until: script_result.rc == 0
   retries: 5
   delay: 10
+
+- name: executing script to create scheduled task
+  shell: 'qm guest exec 112 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
+  register: script_result
+  until: script_result.rc == 0
+  retries: 5
+  delay: 10
+
+- name: executing script to create scheduled task
+  shell: 'qm guest exec 113 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
+  register: script_result
+  until: script_result.rc == 0
+  retries: 5
+  delay: 10
+
+- name: executing script to create scheduled task
+  shell: 'qm guest exec 211 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
+  register: script_result
+  until: script_result.rc == 0
+  retries: 5
+  delay: 10
+
+- name: executing script to create scheduled task
+  shell: 'qm guest exec 212 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
+  register: script_result
+  until: script_result.rc == 0
+  retries: 5
+  delay: 10
+
