--- a/ansible/playbook_test.yml
+++ b/ansible/playbook_test.yml
@@ -23,8 +23,11 @@
     - name: deploy objects on windows server
       import_tasks: tasks/windows/objects_server.yml
     
-    - name: configure ad for vulnerability
-      import_tasks: tasks/windows/vulnerability.yml
+    # - name: configure ad for vulnerability
+    #   import_tasks: tasks/windows/vulnerability.yml
 
     # - name: transform vms to template
     #   import_tasks: tasks/windows/build_templates.yml
+
+    - name: configure scheduled task for ip setup
+      import_tasks: tasks/windows/setup_ip.yml
