--- a/ansible/playbook_test.yml
+++ b/ansible/playbook_test.yml
@@ -14,20 +14,20 @@
     # - name: build_windows_template
     #   import_tasks: tasks/windows/build_server.yml
 
-    # - name: prepare_windows_client_template
-    #   import_tasks: tasks/windows/prepare_client.yml
+    - name: prepare_windows_client_template
+      import_tasks: tasks/windows/prepare_client.yml
 
-    # - name: build_windows_client_template
-    #   import_tasks: tasks/windows/build_client.yml
+    - name: build_windows_client_template
+      import_tasks: tasks/windows/build_client.yml
 
     - name: deploy objects on windows server
       import_tasks: tasks/windows/objects_server.yml
     
-    # - name: configure ad for vulnerability
-    #   import_tasks: tasks/windows/vulnerability.yml
+    - name: configure ad for vulnerability
+      import_tasks: tasks/windows/vulnerability.yml
 
-    # - name: transform vms to template
-    #   import_tasks: tasks/windows/build_templates.yml
+    - name: transform vms to template
+      import_tasks: tasks/windows/build_templates.yml
 
     - name: configure scheduled task for ip setup
       import_tasks: tasks/windows/setup_ip.yml
