fix(deployment) wg routes fix

--- a/deployment_api/playbooks/wireguard_client.yml
+++ b/deployment_api/playbooks/wireguard_client.yml
@@ -107,3 +107,18 @@
       file:
         path: "{{ temp_dir }}"
         state: absent
+
+    - name: add iptables masquerade rule for wg{{ client_id }}
+      ansible.builtin.command: >
+        iptables -t nat -C POSTROUTING -s 172.17.{{ client_id }}.0/30 -d 10.{{ client_id }}.0.0/16 -o eth{{ client_id }} -j MASQUERADE
+      register: iptables_check
+      failed_when: false
+      changed_when: false
+
+    - name: insert iptables masquerade rule if not present
+      ansible.builtin.command: >
+        iptables -t nat -A POSTROUTING -s 172.17.{{ client_id }}.0/30 -d 10.{{ client_id }}.0.0/16 -o eth{{ client_id }} -j MASQUERADE
+      when: iptables_check.rc != 0
+
+    - name: save iptables rules
+      ansible.builtin.command: iptables-save > /etc/iptables/rules.v4
