--- a/ansible/playbook_core.yml
+++ b/ansible/playbook_core.yml
@@ -86,9 +86,13 @@
           - python3
           - ansible
           - pipx
-          - wireguard
       delegate_to: "{{ container_deployment_ip }}"
       
+    # Install ovpn on the VPN container
+    - name: install_ovpn
+      import_tasks: tasks/core_software/install_ovpn.yml
+      delegate_to: "{{ container_deployment_ip }}"
+
     # Deploy the Deployment API on the VPN container
     - name: deploy_deployment_api
       import_tasks: tasks/core_software/deploy_deployment_api.yml
