--- a/deployment_api/playbooks/tasks/create_ovpn.yml
+++ b/deployment_api/playbooks/tasks/create_ovpn.yml
@@ -1,38 +1,5 @@
 - name: run_ovpn_script
-  command: /bin/bash /opt/deployment_api/ovpn_scripts/deploy_user_ovpn.sh
+  command: "/bin/bash /opt/deployment_api/ovpn_scripts/deploy_user_ovpn.sh {{ client_id }} {{ public_ip }}"
   register: script_result
   changed_when: script_result.rc != 0
   failed_when: script_result.rc != 0
-
-- name: read_ovpn_file
-  slurp:
-    src: "/etc/openvpn/user{{ client_id }}/clients/client{{ client_id }}.ovpn"
-  register: ovpn_file
-
-- name: store_client_keys_in_api
-  uri:
-    url: "{{ api_url }}/ovpn/{{ client_id }}"
-    method: POST
-    body_format: json
-    body:
-      private_key: "{{ client_private_key }}"
-      public_key: "{{ client_public_key }}"
-      server_public_key: "{{ server_public_key }}"
-      public_address: "{{ public_ip }}"
-      config: "{{ ovpn_file.content | b64decode }}"
-    status_code: 200
-  register: api_result
-  failed_when: api_result.status != 200 and api_result.status != 201
-
-- name: display_api_result
-  debug:
-    msg: "API result: {{ api_result }}"
-
-- name: get_client_config_from_api
-  uri:
-    url: "{{ api_url }}/ovpn/{{ client_id }}"
-    method: GET
-    return_content: yes
-  register: config_result
-  failed_when: config_result.status != 200
-  ignore_errors: yes
