--- a/ansible/tasks/windows/setup_ip.yml
+++ b/ansible/tasks/windows/setup_ip.yml
@@ -1,35 +1,25 @@
-- name: executing script to create scheduled task
-  shell: 'qm guest exec 111 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
-  register: script_result
-  until: script_result.rc == 0
-  retries: 5
+- name: define_variables
+  set_fact:
+    vms:
+      - { vm_id: "111" } 
+      - { vm_id: "112" }
+      - { vm_id: "113" }
+      - { vm_id: "211" }
+      - { vm_id: "212" }
+
+- name: waiting_agent
+  shell: "qm agent {{ item.vm_id }} ping"
+  register: agent_result_up
+  until: agent_result_up.rc == 0
+  retries: 300
   delay: 10
+  with_items: "{{ vms }}"
 
 - name: executing script to create scheduled task
-  shell: 'qm guest exec 112 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
+  shell: 'qm guest exec {{ item.vm_id }} "powershell.exe" "D:\\schedule_ip_setup.ps1"'
   register: script_result
   until: script_result.rc == 0
   retries: 5
   delay: 10
-
-- name: executing script to create scheduled task
-  shell: 'qm guest exec 113 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
-  register: script_result
-  until: script_result.rc == 0
-  retries: 5
-  delay: 10
-
-- name: executing script to create scheduled task
-  shell: 'qm guest exec 211 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
-  register: script_result
-  until: script_result.rc == 0
-  retries: 5
-  delay: 10
-
-- name: executing script to create scheduled task
-  shell: 'qm guest exec 212 "powershell.exe" "D:\\schedule_ip_setup.ps1"'
-  register: script_result
-  until: script_result.rc == 0
-  retries: 5
-  delay: 10
+  with_items: "{{ vms }}"
 
